--- a/Homework02.ipynb
+++ b/Homework02.ipynb
@@ -67,19 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "522\n"
+     ]
+    }
+   ],
    "source": [
     "## Work on exercise 01 here\n",
     "\n",
     "def sum_of_ints(i0, i1):\n",
     "  # TODO: fill in this function\n",
-    "  return 0\n"
+    "  return sum(range(i0, i1 + 1))\n",
+    "\n",
+    "print(sum_of_ints(4,32))\n"
    ]
   },
   {
@@ -95,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR Check sum of sum_of_ints(88, 39) should be 3175 not 0\n",
+      "ERROR Check sum of sum_of_ints(79, 4) should be 3154 not 0\n",
+      "ERROR Check sum of sum_of_ints(-14, -23) should be -185 not 0\n",
+      "ERROR Check sum of sum_of_ints(74, 34) should be 2214 not 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 01\n",
     "Tests.test(\"01\", sum_of_ints)"
@@ -133,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "tags": [
      "work_cell"
@@ -144,15 +165,35 @@
     "# Implement 02 here\n",
     "\n",
     "def sum_objects(in_list):\n",
-    "  # TODO: fill this in\n",
-    "  return 0\n"
+    "  total = 0\n",
+    "\n",
+    "  for obj in in_list:\n",
+    "    if obj[\"type\"] == \"income\":\n",
+    "      total += obj [\"amount\"]\n",
+    "    elif obj[\"type\"] == \"cost\":\n",
+    "      total -= obj[\"amount\"]\n",
+    "\n",
+    "  return total \n",
+    "\n",
+    "#looked up online to find how to write else if in python\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "467.78"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell to test if function returns 367.78\n",
     "\n",
@@ -179,9 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 02\n",
     "Tests.test(\"02\", sum_objects)"
@@ -228,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,30 +314,46 @@
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8670\n",
+      "Abu Dhabi\n",
+      "-17.88333 30.7\n"
+     ]
+    }
+   ],
    "source": [
     "# Work on 03A here\n",
     "\n",
     "# How many cities are in the list?\n",
     "\n",
-    "num_cities = 0\n",
+    "num_cities = len(info_cities)\n",
+    "print(num_cities)\n",
     "\n",
     "\n",
     "# What's the name of the first city on the list?\n",
     "\n",
-    "first_city = \"\"\n",
+    "first_city = info_cities[0][\"name\"]\n",
+    "print(first_city)\n",
     "\n",
     "\n",
     "# What are the latitude and longitude of the last city on the list?\n",
     "\n",
-    "last_latitude = 0\n",
-    "last_longitude = 0\n",
+    "last = info_cities[-1]\n",
+    "last_latitude = last[\"lat\"]\n",
+    "last_longitude = last[\"lon\"]\n",
+    "print(last_latitude, last_longitude)\n",
     "\n",
     "\n",
     "# What are the populations for the largest and smallest cities?\n",
     "\n",
     "largest_population = 0\n",
     "smallest_population = 0\n",
+    "\n",
+    "print(largest_population, smallest_population)\n",
     "\n",
     "\n",
     "# What's the name of the city with the largest population?\n",
@@ -305,9 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR Check first_city\n",
+      "ERROR Check last_latitude. It should be smaller than 0\n",
+      "ERROR Check last_longitude. It should be greater than 0\n",
+      "ERROR Check largest_population. It should be greater than 0\n",
+      "ERROR Check smallest_population. It should be greater than 0\n",
+      "ERROR Check largest_city_name\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03A\n",
     "answers = [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n",
