--- a/Homework02.ipynb
+++ b/Homework02.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "work_cell"
@@ -105,17 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR Check sum of sum_of_ints(88, 39) should be 3175 not 0\n",
-      "ERROR Check sum of sum_of_ints(79, 4) should be 3154 not 0\n",
-      "ERROR Check sum of sum_of_ints(-14, -23) should be -185 not 0\n",
-      "ERROR Check sum of sum_of_ints(74, 34) should be 2214 not 0\n"
+      "ERROR Check sum of sum_of_ints(85, 1) should be 3655 not 0\n",
+      "ERROR Check sum of sum_of_ints(-3, -10) should be -52 not 0\n"
      ]
     }
    ],
@@ -154,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "work_cell"
@@ -180,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "467.78"
+       "367.78"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +319,8 @@
      "text": [
       "8670\n",
       "Abu Dhabi\n",
-      "-17.88333 30.7\n"
+      "-17.88333 30.7\n",
+      "{'name': 'Shanghai', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.22222, 'lon': 121.45806, 'pop': 22315474} {'name': 'Aonla', 'country': 'IN', 'admin1': 'Uttar Pradesh', 'lat': 28.27402, 'lon': 79.16521, 'pop': 50011}\n"
      ]
     }
    ],
@@ -349,16 +348,18 @@
     "\n",
     "\n",
     "# What are the populations for the largest and smallest cities?\n",
+    "def get_pop(info_cities):\n",
+    "  return info_cities[\"pop\"]\n",
     "\n",
-    "largest_population = 0\n",
-    "smallest_population = 0\n",
+    "largest_population = max(info_cities, key=get_pop)\n",
+    "smallest_population = min(info_cities, key=get_pop)\n",
     "\n",
     "print(largest_population, smallest_population)\n",
     "\n",
     "\n",
     "# What's the name of the city with the largest population?\n",
-    "\n",
-    "largest_city_name = \"\""
+    "#according to the function above shanghai is the largest city with largest population\n",
+    "largest_city_name = max(info_cities, key=get_pop)"
    ]
   },
   {
@@ -370,19 +371,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR Check first_city\n",
-      "ERROR Check last_latitude. It should be smaller than 0\n",
-      "ERROR Check last_longitude. It should be greater than 0\n",
-      "ERROR Check largest_population. It should be greater than 0\n",
-      "ERROR Check smallest_population. It should be greater than 0\n",
-      "ERROR Check largest_city_name\n"
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a real number, not 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03A\u001b[39;00m\n\u001b[1;32m      2\u001b[0m answers \u001b[38;5;241m=\u001b[39m [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n\u001b[0;32m----> 4\u001b[0m \u001b[43mTests\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m03A\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manswers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#cant figure out why this is not working\u001b[39;00m\n",
+      "File \u001b[0;32mHomework02_utils.py:279\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(test_label, test_arg)\u001b[0m\n",
+      "File \u001b[0;32mHomework02_utils.py:87\u001b[0m, in \u001b[0;36mtest_03A\u001b[0;34m(answers)\u001b[0m\n",
+      "File \u001b[0;32mHomework02_utils.py:4\u001b[0m, in \u001b[0;36mfeq\u001b[0;34m(a, b, ep)\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'dict'"
      ]
     }
    ],
@@ -390,7 +393,9 @@
     "# Test 03A\n",
     "answers = [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n",
     "\n",
-    "Tests.test(\"03A\", answers)"
+    "Tests.test(\"03A\", answers)\n",
+    "\n",
+    "#cant figure out why this is not working"
    ]
   },
   {
@@ -406,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "tags": [
      "work_cell"
@@ -416,14 +421,22 @@
    "source": [
     "# Work on 03B here\n",
     "\n",
-    "largest_city = {}"
+    "largest_city = max(info_cities, key=get_pop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03B: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03B\n",
     "Tests.test(\"03B\", largest_city)"
