--- a/Homework02.ipynb
+++ b/Homework02.ipynb
@@ -105,15 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR Check sum of sum_of_ints(85, 1) should be 3655 not 0\n",
-      "ERROR Check sum of sum_of_ints(-3, -10) should be -52 not 0\n"
+      "ERROR Check sum of sum_of_ints(49, 0) should be 1225 not 0\n",
+      "ERROR Check sum of sum_of_ints(-12, -79) should be -3094 not 0\n",
+      "ERROR Check sum of sum_of_ints(-47, -55) should be -459 not 0\n",
+      "ERROR Check sum of sum_of_ints(-45, -100) should be -4060 not 0\n"
      ]
     }
    ],
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "work_cell"
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
        "367.78"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "work_cell"
@@ -320,7 +322,8 @@
       "8670\n",
       "Abu Dhabi\n",
       "-17.88333 30.7\n",
-      "{'name': 'Shanghai', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.22222, 'lon': 121.45806, 'pop': 22315474} {'name': 'Aonla', 'country': 'IN', 'admin1': 'Uttar Pradesh', 'lat': 28.27402, 'lon': 79.16521, 'pop': 50011}\n"
+      "50011 22315474\n",
+      "{'name': 'Shanghai', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.22222, 'lon': 121.45806, 'pop': 22315474}\n"
      ]
     }
    ],
@@ -348,18 +351,24 @@
     "\n",
     "\n",
     "# What are the populations for the largest and smallest cities?\n",
-    "def get_pop(info_cities):\n",
-    "  return info_cities[\"pop\"]\n",
+    "popn = []\n",
     "\n",
-    "largest_population = max(info_cities, key=get_pop)\n",
-    "smallest_population = min(info_cities, key=get_pop)\n",
+    "for city in info_cities:\n",
+    "  popn.append(city[\"pop\"])\n",
     "\n",
-    "print(largest_population, smallest_population)\n",
+    "smallest_pop = min(popn)\n",
+    "largest_pop = max(popn)\n",
+    "\n",
+    "print(smallest_pop, largest_pop)\n",
     "\n",
     "\n",
     "# What's the name of the city with the largest population?\n",
-    "#according to the function above shanghai is the largest city with largest population\n",
-    "largest_city_name = max(info_cities, key=get_pop)"
+    "\n",
+    "largest_city = max(info_cities, key=lambda city: city[\"pop\"])\n",
+    "largest_city[\"name\"]\n",
+    "\n",
+    "print(largest_city)\n",
+    "#according to the function above shanghai is the largest city with largest population\n"
    ]
   },
   {
@@ -371,21 +380,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a real number, not 'dict'",
+     "ename": "NameError",
+     "evalue": "name 'num_cities' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03A\u001b[39;00m\n\u001b[1;32m      2\u001b[0m answers \u001b[38;5;241m=\u001b[39m [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n\u001b[0;32m----> 4\u001b[0m \u001b[43mTests\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m03A\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43manswers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#cant figure out why this is not working\u001b[39;00m\n",
-      "File \u001b[0;32mHomework02_utils.py:279\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(test_label, test_arg)\u001b[0m\n",
-      "File \u001b[0;32mHomework02_utils.py:87\u001b[0m, in \u001b[0;36mtest_03A\u001b[0;34m(answers)\u001b[0m\n",
-      "File \u001b[0;32mHomework02_utils.py:4\u001b[0m, in \u001b[0;36mfeq\u001b[0;34m(a, b, ep)\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'dict'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03A\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m answers \u001b[38;5;241m=\u001b[39m [\u001b[43mnum_cities\u001b[49m, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n\u001b[1;32m      4\u001b[0m Tests\u001b[38;5;241m.\u001b[39mtest(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m03A\u001b[39m\u001b[38;5;124m\"\u001b[39m, answers)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#cant figure out why this is not working\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'num_cities' is not defined"
      ]
     }
    ],
@@ -411,29 +417,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info_cities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Work on 03B here\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m largest_city_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[43minfo_cities\u001b[49m, key\u001b[38;5;241m=\u001b[39mget_pop)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'info_cities' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Work on 03B here\n",
     "\n",
-    "largest_city = max(info_cities, key=get_pop)"
+    "largest_city_name = max(info_cities, key=get_pop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "03B: All tests passed 🎉🎉🎉\n"
+     "ename": "NameError",
+     "evalue": "name 'Tests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03B\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mTests\u001b[49m\u001b[38;5;241m.\u001b[39mtest(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m03B\u001b[39m\u001b[38;5;124m\"\u001b[39m, largest_city)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Tests' is not defined"
      ]
     }
    ],
@@ -465,21 +487,60 @@
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function distance in module __main__:\n",
+      "\n",
+      "distance(cityA, cityB)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Work on 03C here\n",
     "\n",
     "# Implement the helper function for calculating distances between 2 cities\n",
+    "# d(x,y)= sqrt of (x2-x1)sq + (y2-y1)sq\n",
     "\n",
     "def distance(cityA, cityB):\n",
-    "  return 0"
+    "  return 0\n",
+    "\n",
+    "help(distance)\n",
+    "\n",
+    "  #need help with this"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR Check distance between {'lat': 17.382, 'lon': 143.844} and {'lat': -18.839, 'lon': 120.78} . It should be 42.941 not 0\n",
+      "ERROR Check distance between {'lat': -63.165, 'lon': 29.347} and {'lat': -42.739, 'lon': 124.408} . It should be 97.231 not 0\n",
+      "ERROR Check distance between {'lat': -62.301, 'lon': 143.826} and {'lat': 60.828, 'lon': -62.141} . It should be 239.965 not 0\n",
+      "ERROR Check distance between {'lat': 45.651, 'lon': -110.865} and {'lat': -46.94, 'lon': -53.833} . It should be 108.746 not 0\n",
+      "ERROR Check distance between {'lat': -14.302, 'lon': 104.183} and {'lat': -21.567, 'lon': 170.993} . It should be 67.204 not 0\n",
+      "ERROR Check distance between {'lat': 25.246, 'lon': -40.968} and {'lat': -63.702, 'lon': -36.354} . It should be 89.068 not 0\n",
+      "ERROR Check distance between {'lat': -71.433, 'lon': 160.581} and {'lat': -1.441, 'lon': -126.598} . It should be 295.585 not 0\n",
+      "ERROR Check distance between {'lat': -31.488, 'lon': -95.583} and {'lat': 59.559, 'lon': 144.991} . It should be 257.226 not 0\n",
+      "ERROR Check distance between {'lat': -68.208, 'lon': 10.46} and {'lat': 16.41, 'lon': -156.46} . It should be 187.143 not 0\n",
+      "ERROR Check distance between {'lat': -13.79, 'lon': 74.77} and {'lat': 31.542, 'lon': -5.753} . It should be 92.406 not 0\n",
+      "ERROR Check distance between {'lat': -49.69, 'lon': -139.73} and {'lat': -0.232, 'lon': 159.961} . It should be 303.745 not 0\n",
+      "ERROR Check distance between {'lat': -54.425, 'lon': -131.867} and {'lat': -59.675, 'lon': -9.758} . It should be 122.222 not 0\n",
+      "ERROR Check distance between {'lat': -37.903, 'lon': 149.684} and {'lat': -74.73, 'lon': 169.074} . It should be 41.62 not 0\n",
+      "ERROR Check distance between {'lat': 47.002, 'lon': -160.528} and {'lat': 20.898, 'lon': 2.538} . It should be 165.142 not 0\n",
+      "ERROR Check distance between {'lat': 51.451, 'lon': 71.785} and {'lat': -75.015, 'lon': -70.177} . It should be 190.123 not 0\n",
+      "ERROR Check distance between {'lat': 15.493, 'lon': 155.707} and {'lat': -76.749, 'lon': -62.29} . It should be 236.709 not 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03C\n",
     "Tests.test(\"03C\", distance)"
@@ -825,9 +886,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_from_key' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# get a list with all of the price values\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m prices \u001b[38;5;241m=\u001b[39m \u001b[43mlist_from_key\u001b[49m(info_houses, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# get a list with all of the values of one feature\u001b[39;00m\n\u001b[1;32m      5\u001b[0m feature_0_values \u001b[38;5;241m=\u001b[39m list_from_key(info_houses, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'list_from_key' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# get a list with all of the price values\n",
     "prices = list_from_key(info_houses, \"value\")\n",
@@ -856,9 +929,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info_houses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# to plot all feature pairs\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# get list of all features\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m features \u001b[38;5;241m=\u001b[39m \u001b[43minfo_houses\u001b[49m[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mkeys()\n\u001b[1;32m      4\u001b[0m prices \u001b[38;5;241m=\u001b[39m list_from_key(info_houses, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# get all pairs of features\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'info_houses' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# to plot all feature pairs\n",
     "# get list of all features\n",
