--- a/Homework02.ipynb
+++ b/Homework02.ipynb
@@ -380,24 +380,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'num_cities' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03A\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m answers \u001b[38;5;241m=\u001b[39m [\u001b[43mnum_cities\u001b[49m, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n\u001b[1;32m      4\u001b[0m Tests\u001b[38;5;241m.\u001b[39mtest(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m03A\u001b[39m\u001b[38;5;124m\"\u001b[39m, answers)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#cant figure out why this is not working\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_cities' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR Check largest_city_name\n"
      ]
     }
    ],
    "source": [
     "# Test 03A\n",
-    "answers = [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n",
+    "answers = [num_cities, first_city, last_latitude, last_longitude, largest_pop, smallest_pop, largest_city]\n",
     "\n",
     "Tests.test(\"03A\", answers)\n",
     "\n",
@@ -417,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "tags": [
      "work_cell"
@@ -425,37 +421,29 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'info_cities' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Work on 03B here\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m largest_city_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[43minfo_cities\u001b[49m, key\u001b[38;5;241m=\u001b[39mget_pop)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'info_cities' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Shanghai', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.22222, 'lon': 121.45806, 'pop': 22315474}\n"
      ]
     }
    ],
    "source": [
     "# Work on 03B here\n",
     "\n",
-    "largest_city_name = max(info_cities, key=get_pop)"
+    "print(largest_city)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Tests' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 03B\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mTests\u001b[49m\u001b[38;5;241m.\u001b[39mtest(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m03B\u001b[39m\u001b[38;5;124m\"\u001b[39m, largest_city)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Tests' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03B: All tests passed 🎉🎉🎉\n"
      ]
     }
    ],
